sample_data/00c/00c1623bc64aa05524630de2e0c3e7c5fb4cbc7e
frontend/src/Frontend.hs:38:39: error:
    • Couldn't match type ‘()’
                     with ‘Data.Dependent.Sum.DSum
                             FrontendRoute Data.Functor.Identity.Identity’
        arising from a functional dependency between:
          constraint ‘Routed t (R FrontendRoute) (RoutedT t () m)’
            arising from a use of ‘page’
          instance ‘Routed t1 r (RoutedT t1 r m1)’ at <no location info>
    • In the expression: page contactsIndex
      In a case alternative: FrontendRoute_Contacts -> page contactsIndex
      In the expression:
        case r of
          FrontendRoute_Buildings -> maybeRoute_ notFound buildings
          FrontendRoute_Contacts -> page contactsIndex
   |
38 |             FrontendRoute_Contacts -> page contactsIndex
   |                                       ^^^^^^^^^^^^^^^^^^
frontend/src/Frontend.hs:44:31: error:
    • Couldn't match type ‘()’
                     with ‘Data.Dependent.Sum.DSum
                             FrontendRoute Data.Functor.Identity.Identity’
        arising from a functional dependency between:
          constraint ‘Routed t (R FrontendRoute) (RoutedT t () m)’
            arising from a use of ‘page’
          instance ‘Routed t1 r (RoutedT t1 r m1)’ at <no location info>
    • In the expression: page buildingsIndex
      In a case alternative: Building_Index -> page buildingsIndex
      In the expression:
        case r of { Building_Index -> page buildingsIndex }
   |
44 |             Building_Index -> page buildingsIndex
   |                               ^^^^^^^^^^^^^^^^^^^